# swagger_server/models/inline_response200.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class InlineResponse200(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, email: str=None, name: str=None):  # noqa: E501
+        """InlineResponse200 - a model defined in Swagger
+
+        :param email: The email of this InlineResponse200.  # noqa: E501
+        :type email: str
+        :param name: The name of this InlineResponse200.  # noqa: E501
+        :type name: str
+        """
+        self.swagger_types = {
+            'email': str,
+            'name': str
+        }
+
+        self.attribute_map = {
+            'email': 'email',
+            'name': 'name'
+        }
+        self._email = email
+        self._name = name
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse200':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
+        :rtype: InlineResponse200
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def email(self) -> str:
+        """Gets the email of this InlineResponse200.
+
+        Email of the contact  # noqa: E501
+
+        :return: The email of this InlineResponse200.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email: str):
+        """Sets the email of this InlineResponse200.
+
+        Email of the contact  # noqa: E501
+
+        :param email: The email of this InlineResponse200.
+        :type email: str
+        """
+
+        self._email = email
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this InlineResponse200.
+
+        Name of the contact  # noqa: E501
+
+        :return: The name of this InlineResponse200.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this InlineResponse200.
+
+        Name of the contact  # noqa: E501
+
+        :param name: The name of this InlineResponse200.
+        :type name: str
+        """
+
+        self._name = name
